fixed index overflow layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,12 +98,9 @@ h2 {
   line-height: 1.75rem;
   tab-size: 4;
   display: block;
-  margin-block-start: 3em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+ 
   margin-top: 2.5rem;
-  padding-top: 31px;
+  
   margin-left: 400px;
   margin-right: 400px;
   text-align: center;
